# qr-builder

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml  server.py
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  security.yml
docs/: getting-started.md  index.md
qr_builder/: __init__.py  api.py  auth.py  cli.py  core.py
tests/: test_api.py
