[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qr-builder"
version = "0.3.0"
description = "Generate and embed QR codes into images via Python, CLI, and FastAPI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "AIQSO", email = "dev@aiqso.io" }
]
keywords = ["qr", "qrcode", "image", "fastapi", "cli", "branding", "marketing"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: Developers",
  "Topic :: Multimedia :: Graphics",
  "Framework :: FastAPI",
]

dependencies = [
  "qrcode[pil]>=7.4.2",
  "Pillow>=10.0.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
# Artistic QR code generation (logo embedding, pixel art). Install with: pip install "qr-builder[artistic]"
# Note: these upstream packages are not actively maintained; pin in production.
artistic = [
  "amzqr>=0.0.1",
  "pyqart>=0.1.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.0.0",
  "httpx>=0.27.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "pip-audit>=2.7.0",
  "deptry>=0.20.0",
  "pip-tools>=7.4.0",
]

[project.scripts]
qr-builder = "qr_builder.cli:main"
qr-builder-api = "qr_builder.api:run"

[project.urls]
Homepage = "https://github.com/AIQSO/qr-builder"
Source = "https://github.com/AIQSO/qr-builder"
Issues = "https://github.com/AIQSO/qr-builder/issues"
Documentation = "https://aiqso.github.io/qr-builder/"
Changelog = "https://github.com/AIQSO/qr-builder/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["qr_builder*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses these as function-arg defaults by design
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.File",
  "fastapi.Form",
  "fastapi.Body",
  "fastapi.Query",
  "fastapi.Header",
  "fastapi.Path",
  "fastapi.Cookie",
  "fastapi.Security",
  "qr_builder.auth.require_style",
  "qr_builder.auth.require_tier",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.deptry]
known_first_party = ["qr_builder"]
# Runtime: python-multipart is used implicitly by FastAPI (UploadFile/Form).
# Dev tooling entries are invoked as CLIs, not imported in source.
[tool.deptry.per_rule_ignores]
DEP002 = [
  "python-multipart",
  "pyqart",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "ruff",
  "mypy",
  "pip-audit",
  "deptry",
  "pip-tools",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.coverage.run]
source = ["qr_builder"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
]
